--- a/app/templates/article/article_list.html
+++ b/app/templates/article/article_list.html
@@ -24,7 +24,7 @@
   <script src="{% static 'admin-lte/plugins/bootstrap/js/bootstrap.bundle.min.js' %} "></script>
   <script src="{% static 'admin-lte/dist/js/adminlte.min.js' %}"></script>
   <script src="{% static 'admin-lte/dist/js/demo.js' %}"></script>
-  <script src="{% static 'js/content.js' %}"></script>
+  <script src="{% static 'js/base_article.js' %}"></script>
   <script src="{% static 'js/base_ajax.js' %}"></script>
   <script src="{% static 'js/article_like_ajax.js' %}"></script>
   <script src="{% static 'js/test.js' %}"></script>
@@ -34,9 +34,10 @@
 
       /* 記事をクリックすると、記事詳細に遷移 */
       $(document).on('click', '.article', function (event) {
-        var $articleId = $(this).attr('id');
-        location.href = "comment/" + $articleId;
-      })
+        var url = "{% url 'article:comment' 1000 %}";
+        var articleId = $(this).attr('id');
+        document.location.href = url.replace('1000', articleId);
+      });
 
       /* カメラマーククリック後、ファイル選択を映す */
       $('#id_post_media').on('click', function () {
@@ -62,7 +63,7 @@
         isTweetButtonValid();
       })
 
-      /* 自己紹介の文字カウント */
+      /* ツイートの文字カウント */
       $('#inputDescription').on('keyup', countTweetLength);
 
       function countTweetLength() {
@@ -70,7 +71,7 @@
         $('#id_tweet_count').text(countTweetLength);
       }
 
-      // ツイートボタンの有効無効かの判断の初期化
+      // ツイートボタンの有効無効をツイートまたは投稿画像の有無で判断し、ツイートボタンに反映
       isTweetButtonValid()
       /* ツイート文字数が０の場合,submitボタンを向こうにする */
       $('#inputDescription').on('keyup', isTweetButtonValid);
@@ -88,24 +89,6 @@
           $("#id_tweet").prop("disabled", false);
         }
       }
-
-      /* 記事に付随するプロフィール画像にカーソルが当たると矢印から指マークに変わる
-　　　写真の明るさが暗くなる　*/
-      $('.article-profile-image').hover(function () {
-        $(this).css('cursor', 'pointer');
-        $(this).css('opacity', '0.7');
-      });
-
-      /* 記事に付随するプロフィール画像にカーソルから外れると
-　　　写真の明るさがデフォルトに戻る　*/
-      $('.article-profile-image').mouseout(function () {
-        $(this).css('opacity', '1');
-      });
-
-      /* 記事ににカーソルが当たると矢印から指マークに変わる　*/
-      $('.article').hover(function () {
-        $(this).css('cursor', 'pointer');
-      });
     });
   </script>
 </head>
