--- a/app/templates/account/login.html
+++ b/app/templates/account/login.html
@@ -1,11 +1,10 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="ja">
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+  integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
 
 <head>
-  <title>記事</title>
   <meta name="generator" content="Jekyll v3.8.5" />
   <meta property="og:title" content="Layout" />
   <meta property="og:locale" content="en_US" />
