--- a/app/templates/account/signup.html
+++ b/app/templates/account/signup.html
@@ -1,23 +1,22 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="ja">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+  integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
 
 <head>
-  <title>記事</title>
   <meta name="generator" content="Jekyll v3.8.5" />
   <meta property="og:title" content="Layout" />
   <meta property="og:locale" content="en_US" />
   <meta name="description" content="AdminLTE v3 Documentaion" />
   <meta property="og:description" content="AdminLTE v3 Documentaion" />
   <meta property="og:site_name" content="AdminLTE v3 Documentaion" />
-  <link rel="stylesheet" href="{% static 'admin-lte/plugins/fontawesome-free/css/all.min.css' %}">
-  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  <link rel="stylesheet" type="text/css" href="{% static 'admin-lte/dist/css/adminlte.min.css' %}">
+  <link rel="stylesheet" href="{% static 'admin-lte/plugins/fontawesome-free/css/all.min.css' %}" />
+  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
+  <link rel="stylesheet" type="text/css" href="{% static 'admin-lte/dist/css/adminlte.min.css' %}" />
   <link rel="stylesheet" type="text/css"
-    href="{% static 'admin-lte/plugins/icheck-bootstrap/icheck-bootstrap.min.css' %}">
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+    href="{% static 'admin-lte/plugins/icheck-bootstrap/icheck-bootstrap.min.css' %}" />
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet" />
   <script src="{% static 'admin-lte/plugins/jquery/jquery.min.js' %}"></script>
   <script src="{% static 'admin-lte/plugins/jquery-ui/jquery-ui.min.js' %}"></script>
   <script src="{% static 'admin-lte/plugins/bootstrap/js/bootstrap.bundle.min.js' %} "></script>
