refactor:cacheの無効化、errorページのカスタマイズ

--- a/app/templates/home/article_list.html
+++ b/app/templates/home/article_list.html
@@ -176,7 +176,7 @@
                             </div>
                             <div class="col-md-4 text-center align-bottom">
                                 <span class="text-lg">
-                                    <i class="far fa-comments" style="color:seagreen"></i>
+                                    <i class="far fa-comments"></i>
                                     {% if article_info.article.comment.all.count != 0 %}
                                     {{article_info.article.comment.all.count}}
                                     {% endif %}
