feat:特定のコンテンツのみスクロールする機能実装

--- a/app/static/css/contents.css
+++ b/app/static/css/contents.css
@@ -25,3 +25,9 @@ figure figcaption {
   float: right;
   cursor: pointer;
 }
+
+.scroll {
+  height: 900px;
+  overflow: auto;
+  overscroll-behavior-y: contain;
+}
