--- a/app/templates/home/article_list.html
+++ b/app/templates/home/article_list.html
@@ -143,9 +143,9 @@
                                     {{ article_info.article.content }}
                                 </p>
                                 {% if article_info.article.article_media %}
-                                <img class="article-profile-image rounded border border-dark"
+                                <img class="article-profile-image rounded border border-light"
                                     src="{{article_info.article.article_media.url}}" alt="user image"
-                                    style="width:100%;height:250px;">
+                                    style="width:80%;height:300px;">
                                 {% endif %}
                             </div>
                         </div>
