--- a/app/templates/home/base_home.html
+++ b/app/templates/home/base_home.html
@@ -59,7 +59,7 @@
                     <a class="nav-link on-implementing" id="v-pills-settings-tab">Settings</a>
                 </div>
             </div>
-            <div class="col-5">
+            <div class="col-5 scroll">
                 {% block article_content %}
                 {% endblock %}
             </div>
