refactor:usernameを記事のプロフィール欄に掲載

--- a/app/static/css/contents.css
+++ b/app/static/css/contents.css
@@ -27,7 +27,17 @@ figure figcaption {
 }
 
 .scroll {
-  height: 900px;
+  height: 700px;
   overflow: auto;
-  overscroll-behavior-y: contain;
+  overflow-y: scroll;
+}
+
+.user-name {
+  color: gray;
+  text-decoration: none;
+}
+
+.user-name:hover {
+  color: #333;
+  text-decoration: none;
 }
