--- a/app/templates/home/comment_of_article.html
+++ b/app/templates/home/comment_of_article.html
@@ -310,8 +310,11 @@
                     <div class="col-10">
                         <a href="{% url 'account:profile' article_info.article.user.id %}" class="text-dark"
                             style="font-weight: bold;">
-                            {{ article_info.article.user.name }}
-                        </a><br>
+                            {{article_info.article.user.name}}
+                        </a><br />
+                        <a href="{% url 'account:profile' article_info.article.user.id %}" class="user-name">
+                            {{article_info.article.user.username}}
+                        </a><br />
                         <small class="text-muted">2020/04/15</small>
                     </div>
                 </div>
@@ -322,9 +325,9 @@
                             {{ article_info.article.content }}
                         </p>
                         {% if article_info.article.article_media %}
-                        <img class="article-profile-image rounded border border-light"
+                        <img class="article-profile-image rounded border border-gray"
                             src="{{article_info.article.article_media.url}}" alt="user image"
-                            style="width:80%;height:300px;">
+                            style="width:80%;height:250px;">
                         {% endif %}
                     </div>
                 </div>
