--- a/app/templates/home/base_home.html
+++ b/app/templates/home/base_home.html
@@ -68,8 +68,8 @@
             <div class="col-3">
                 <br>
                 <div class="input-group mb-2">
-                    <input type="text" class="form-control" placeholder="Recipient's username"
-                        aria-label="Recipient's username" aria-describedby="basic-addon2">
+                    <input type="text" class="form-control" placeholder="キーワードで検索" aria-label="Recipient's username"
+                        aria-describedby="basic-addon2">
                     <div class="input-group-append on-implementing">
                         <span class="input-group-text" id="basic-addon2"><i class="fas fa-search"
                                 style="font-size: 24px;"></i></span>
